# RL24_Homework4

./: README.md
my_xy_bag/: metadata.yaml  my_xy_bag_0.db3
rl_fra2mo_description/: CMakeLists.txt  package.xml
rl_fra2mo_description/config/: explore.yaml  goals.yaml  goals_points.yaml  navigation.yaml  slam.yaml
rl_fra2mo_description/launch/: display_fra2mo.launch.py  fra2mo_vision.launch.py  gazebo_fra2mo.launch.py
rl_fra2mo_description/maps/: my_map_1.pgm  my_map_1.yaml  my_map_2.pgm  my_map_2.yaml  my_map_3.pgm  my_map_3.yaml  my_map_4.pgm  my_map_4.yaml
rl_fra2mo_description/scripts/: follow_map_points.py  follow_vis_points.py  follow_waypoints.py  reach_goal.py
rl_fra2mo_description/src/: fra2mo_pose_xy_node.cpp
rl_fra2mo_description/urdf/: camera_macro.xacro  fra2mo.urdf.xacro
rl_fra2mo_description/worlds/: leonardo_race_field.sdf
